--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
@@ -987,8 +987,12 @@ spec:
                     type: object
                 type: object
               templateReference:
-                description: 'Deprecated: This field is deprecated and will be removed
-                  in a future release.'
+                description: |-
+                  TemplateReference refers to the Template the Metal3MachineTemplate refers to.
+                  It can be matched against the key or it may also point to the name of the template
+                  Metal3Data refers to.
+
+                  Deprecated: This field is deprecated and will be removed in a future release.
                 type: string
             required:
             - clusterName
